--- a/farkle.html
+++ b/farkle.html
@@ -14,24 +14,25 @@
 var tom = {
 name: "Tom",
 score: 0,
+currentTurnPoints: 0,
 holding: [],
-rollAgain: true,
 round: 0
 };
 var andy = {
 name: "Andy",
 score: 0,
+currentTurnPoints: 0,
 holding: [],
-rollAgain: true,
 round: 0
 };
 var art = {
 name: "Art",
 score: 0,
+currentTurnPoints: 0,
 holding: [],
-rollAgain: true,
 round: 0
 };
+var numOfDice = 6;
 var onesCount;
 var twosCount;
 var threesCount;
@@ -72,47 +73,54 @@ function beginTurn(){
 	}
 	disqualified = false;
 	currentPlayer = turnQueue.shift(); //Grab 1st player from queue
+	currentPlayer.currentTurnPoints = 0;
+	currentPlayer.holding = [];
 	currentPlayer.round++;
-	//Roll all 6 dice
-	var diceRolled = rollDice(6 - diceHolding.length);
+	turn();
+	}
+	
+function turn(){
+	var numRolling = numOfDice - currentPlayer.holding.length;
+	if (numRolling == 0)
+		numRolling = numOfDice;
+	//Roll dice
+	gameObj.diceRolled = rollDice(numRolling);
 	//If no points are rolled, turn is over
-	if (!checkForPoints(diceRolled))
-		endTurn();
-	gameObj.diceRolled = diceRolled;
-	var currentPoints = 0;
+	if (!checkForPoints(gameObj.diceRolled))
+		endTurn(currentPlayer, 0);
+	var currentPoints;
 	switch(currentPlayer.name){
 	case "Tom":
 		var response = TomTurn(gameObj);
-		var dh = response.diceHolding;
-		currentPoints += calculatePoints(dh);
+		currentPlayer.holding = response.diceHolding;
+		currentPoints = calculatePoints(currentPlayer.holding);
 		if (response.rollAgain && !disqualified)
-			continueTurn();
+			turn();
+			
 		else
 			endTurn(currentPlayer, currentPoints);
 		break;
 	case "Art":
 		var response = ArtTurn(gameObj);
-		var dh = response.diceHolding;
-		currentPoints += calculatePoints(dh);
+		currentPlayer.holding = response.diceHolding;
+		currentPoints = calculatePoints(currentPlayer.holding);
 		if (response.rollAgain && !disqualified)
-			continueTurn();
+			turn();
 		else
 			endTurn(currentPlayer, currentPoints);
 		break;
 	case "Andy":
 		var response = AndyTurn(gameObj);
-		var dh = response.diceHolding;
-		currentPoints += calculatePoints(dh);
-		if (response.rollAgain && !disqualified)
-			continueTurn();
+		currentPlayer.holding = response.diceHolding;
+		currentPoints = calculatePoints(currentPlayer.holding);
+		if (response.rollAgain && !disqualified){
+			currentPlayer.currentTurnPoints += currentPoints;
+			turn();
+			}
 		else
 			endTurn(currentPlayer, currentPoints);
 		break;
 	}
-}
-
-function continueTurn(){
-	
 }
 
 function endTurn(currentPlayer, pointsScored){
@@ -120,6 +128,17 @@ function endTurn(currentPlayer, pointsScored){
 	if (currentPlayer.score > 9999)
 		isFinalRound = true;
 	beginTurn();
+}
+
+function gameOver(){
+	var winningScore = 0;
+	var winnerName;
+	for (var player of turnOrder){
+		if (player.score > winningScore)
+			winnerName = player.name;
+	}
+	
+	alert("Congrats " + winnerName);
 }
 
 function rollDice(numToRoll){
