--- a/farkle.html
+++ b/farkle.html
@@ -12,10 +12,22 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
 </head>
 <body>
+<div class="row" style="text-align:center;">
+<div class="col-md-12"  style="display:inline-block; float:none; text-align:center;">
 <h1 id="heading">Farkle</h1>
+</div>
+<button id="startGame" class="col-md-12"  style="display:inline-block; float:none; text-align:center;" onclick='SetupGame()'>Begin</button>
+</div> <!-- End of row -->
+<div class="row">
+<div class="col-md-4" id="TomConsole">Tom</div>
+<div class="col-md-4" id="AndyConsole">Andy</div>
+<div class="col-md-4" id="ArtConsole">Art</div>
+</div>
 <!--<button id="startGame" onclick='document.getElementById("startGame").innerHTML = "Tom"'>Begin</button>
 -->
-<button id="startGame" onclick='SetupGame()'>Begin</button>
+
+
+
 <!-- jQuery first, then Tether, then Bootstrap JS. -->
 <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
