--- a/farkle.html
+++ b/farkle.html
@@ -19,13 +19,12 @@
 <button id="startGame" class="col-md-12"  style="display:inline-block; float:none; text-align:center;" onclick='SetupGame()'>Begin</button>
 </div> <!-- End of row -->
 <div class="row">
-<div class="col-md-4" id="TomConsole">Tom</div>
-<div class="col-md-4" id="AndyConsole">Andy</div>
-<div class="col-md-4" id="ArtConsole">Art</div>
+<div class="col-md-4" id="TomConsole" style="display:inline-block; float:none; text-align:center;"><h4>Tom</h4></div>
+<div class="col-md-4" id="AndyConsole" style="display:inline-block; float:none; text-align:center;"><h4>Andy</h4></div>
+<div class="col-md-4" id="ArtConsole" style="display:inline-block; float:none; text-align:center;"><h4>Art</h4></div>
 </div>
 <!--<button id="startGame" onclick='document.getElementById("startGame").innerHTML = "Tom"'>Begin</button>
 -->
-
 
 
 <!-- jQuery first, then Tether, then Bootstrap JS. -->
