--- a/farkle.html
+++ b/farkle.html
@@ -5,6 +5,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <script src="CoreGame/FarkleGame.js"></script>
+<script src="GameUi/TomUi.js"></script>
 <!--Create a folder called "AIs" in the same directory as this HTML file-->
 <script src="AIs/TomAI.js"></script>
 <script src="AIs/ArtAI.js"></script>
