--- a/farkle.html
+++ b/farkle.html
@@ -1,63 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- Required meta tags -->
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<script src="GameUi/lodash.js"></script>
-<script src="CoreGame/FarkleGame.js"></script>
-<script src="GameUi/TomUi.js"></script>
+	<!-- Required meta tags -->
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<script src="Helper/lodash.js"></script>
+	<script src="CoreGame/FarkleGame.js"></script>
+	<script src="GameUi/TomUi.js"></script>
 
-<!--Create a folder called "AIs" in the same directory as this HTML file-->
-<script src="AIs/TomAI.js"></script>
-<script src="AIs/ArtAI.js"></script>
-<script src="AIs/AndyAI.js"></script>
+	<!--Create a folder called "AIs" in the same directory as this HTML file-->
+	<script src="AIs/TomAI.js"></script>
+	<script src="AIs/ArtAI.js"></script>
+	<script src="AIs/AndyAI.js"></script>
 
-<!-- Bootstrap CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+	<!-- Bootstrap CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
 </head>
 <body>
-<div class="row" style="text-align:center;">
-<div class="col-md-12"  style="display:inline-block; float:none; text-align:center;">
-<h1 id="heading">Farkle</h1>
-</div>
-</div> <!-- End of row -->
-<div class="row" style="height: 500px; margin-bottom: 50px;">
-<div class="col-md-4" id="TomConsole" style="display:inline-block; float:none; text-align:center;"><h4 id="Tom">Tom</h4>
-<textarea id="TomTextArea" style="overflow-y: scroll; height: 100%; resize: none; width: 100%; margin-left: 5px;"></textarea>
-</div>
-<div class="col-md-4" id="AndyConsole" style="display:inline-block; float:none; text-align:center;"><h4 id="Andy">Andy</h4>
-	<textarea id="AndyTextArea" style="overflow-y: scroll; height: 100%; resize: none; width: 100%; margin-left: 5px;"></textarea>
-</div>
-<div class="col-md-4" id="ArtConsole" style="display:inline-block; float:none; text-align:center;"><h4 id="Art">Art</h4>
-	<textarea id="ArtTextArea" style="overflow-y: scroll; height: 100%; resize: none; width: 100%; margin-left: 5px; margin-right: 5px;"></textarea>
-</div>
-</div>
-<div class="row">
-		<div class="dropdown">
-				<button id="gameModeDDL" onclick="myFunction()" class="btn btn-primary dropdown-toggle" type="button" style="margin-left: 25px" data-toggle="dropdown">Select Game Mode
-						<span class="caret"></span>
-				</button>
-				<ul class="dropdown-menu" style="margin-left: 25px">
-						<li><a onclick="setRoundGameMode('Round')">Round</a></li>
-						<li><a onclick="setRoundGameMode('Game')">Game</a></li>
-						<li><a onclick="setRoundGameMode('Batch')">Batch</a></li>
-					  </ul>
-			  </div>
-</div>
+	<div class="row" style="text-align:center;">
+		<div class="col-md-12"  style="display:inline-block; float:none; text-align:center;">
+			<h1 id="heading">Farkle</h1>
+		</div>
+	</div>
+	<div class="row" style="height: 500px; margin-bottom: 50px;">
+		<div class="col-md-4" id="TomConsole" style="display:inline-block; float:none; text-align:center;">
+			<h4 id="Tom">Tom</h4>
+			<textarea id="TomTextArea" style="overflow-y: scroll; height: 100%; resize: none; width: 100%; margin-left: 5px;"></textarea>
+		</div>
+		<div class="col-md-4" id="AndyConsole" style="display:inline-block; float:none; text-align:center;">
+			<h4 id="Andy">Andy</h4>
+			<textarea id="AndyTextArea" style="overflow-y: scroll; height: 100%; resize: none; width: 100%; margin-left: 5px;"></textarea>
+		</div>
+		<div class="col-md-4" id="ArtConsole" style="display:inline-block; float:none; text-align:center;">
+			<h4 id="Art">Art</h4>
+			<textarea id="ArtTextArea" style="overflow-y: scroll; height: 100%; resize: none; width: 100%; margin-left: 5px; margin-right: 5px;"></textarea>
+		</div>
+	</div>	
+	<div>
+		<button id="startGame" class="fixed-bottom col-md-12"  style="display:inline-block; float:none; text-align:center;" onclick='SetupGame()'>Start Game</button>
+	</div>
 
-		
-	  <div>
-
-	<button id="startGame" class="fixed-bottom col-md-12"  style="display:inline-block; float:none; text-align:center;" onclick='SetupGame()'>Start Game</button>
-</div>
-
-<!--<button id="startGame" onclick='document.getElementById("startGame").innerHTML = "Tom"'>Begin</button>
--->
-
-<!-- jQuery first, then Tether, then Bootstrap JS. -->
-<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+	<!-- jQuery first, then Tether, then Bootstrap JS. -->
+	<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 </body>
 </html>
