--- a/farkle.html
+++ b/farkle.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<script src="Helper/lodash.js"></script>
 	<script src="CoreGame/FarkleGame.js"></script>
-	<script src="GameUi/TomUi.js"></script>
+	<script src="GameUi/EpicUi.js"></script>
 
 	<!--Create a folder called "AIs" in the same directory as this HTML file-->
 	<script src="AIs/TomAI.js"></script>
